--- a/groovy_maven/src/main/resources/application.properties
+++ b/groovy_maven/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=groovy_maven
+
+# H2 Console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=kudo2003
+spring.datasource.password=kudo2003
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
